--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
     "expo-font": "^8.2.1",
+    "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
